Update and rename 2021-08-12-test.md to 2021-08-12-final-day.md

--- a/_posts/2021-08-12-final-day.md
+++ b/_posts/2021-08-12-final-day.md
@@ -2,7 +2,7 @@
 layout: post
 title:  "Final day"
 author: kriza
-categories: [ Beyond ]
+categories: [ Beyond, Erasmus+ ]
 image: assets/images/beyond/final_day.jpg
 ---
 
