Update and rename 2021-08-11-day-7.md to 2021-09-25-day-7.md

--- a/_posts/2021-09-25-day-7.md
+++ b/_posts/2021-09-25-day-7.md
@@ -1,7 +1,7 @@
 ---
 layout: post
-title:  "Final day"
-author: kriza
+title:  "Beyond the limits - Final day"
+author: marosi
 categories: [ Beyond, Erasmus+ ]
 image: assets/images/beyond/day-7.jpg
 ---
