Update and rename 2021-09-25-day-7.md to 2021-09-24-day-7.md

--- a/_posts/2021-09-24-day-7.md
+++ b/_posts/2021-09-24-day-7.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title:  "Beyond the limits - Final day"
+title:  "Beyond the limits- day 7"
 author: marosi
 categories: [ Beyond, Erasmus+ ]
 image: assets/images/beyond/day-7.jpg
